syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";

// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// DeathKnightTalents message.
message DeathKnightTalents {
}

enum DeathKnightMajorGlyph {
    DeathKnightMajorGlyphNone = 0;
    GlyphOfAntiMagicShell = 43533;
    GlyphOfUnholyFrenzy = 43534;
    GlyphOfIceboundFortitude = 43536;
    GlyphOfChainsOfIce = 43537;
    GlyphOfDeathGrip = 43541;
    GlyphOfDeathAndDecay = 43542;
    GlyphOfShiftingPresences = 43543;
    GlyphOfIcyTouch = 43546;
    GlyphOfEnduringInfection = 43547;
    GlyphOfPestilence = 43548;
    GlyphOfMindFreeze = 43549;
    GlyphOfStrangulate = 43552;
    GlyphOfPillarOfFrost = 43553;
    GlyphOfVampiricBlood = 43554;
    GlyphOfUnholyCommand = 43825;
    GlyphOfOutbreak = 43826;
    GlyphOfDancingRuneWeapon = 45799;
    GlyphOfDarkSimulacrum = 45800;
    GlyphOfDeathCoil = 45804;
    GlyphOfDarkSuccor = 68793;
    GlyphOfSwiftDeath = 104046;
    GlyphOfLoudHorn = 104047;
    GlyphOfRegenerativeMagic = 104048;
    GlyphOfFesteringBlood = 104049;
}

enum DeathKnightMinorGlyph {
    DeathKnightMinorGlyphNone = 0;
    GlyphOfTheGeist = 43535;
    GlyphOfDeathsEmbrace = 43539;
    GlyphOfHornOfWinter = 43544;
    GlyphOfArmyOfTheDead = 43550;
    GlyphOfFoulMenagerie = 43551;
    GlyphOfPathOfFrost = 43671;
    GlyphOfResilientGrip = 43672;
    GlyphOfDeathGate = 43673;
    GlyphOfCorpseExplosion = 43827;
    GlyphOfTranquilGrip = 45806;
    GlyphOfTheSkeleton = 104099;
    GlyphOfTheLongWinter = 104101;
}

// END GENERATED
message DeathKnightOptions {
	double starting_runic_power = 1;
	double pet_uptime = 2;
}

message BloodDeathKnight {
	message Rotation {
		enum Opener {
			Regular = 0;
			Threat = 1;
		}

		enum OptimizationSetting {
			Hps = 0;
			Tps = 1;
		}

		enum BloodSpell {
			BloodStrike = 0;
			BloodBoil = 1;
			HeartStrike = 2;
		}

		enum BloodTapPrio {
			Defensive = 0;
			Offensive = 1;
		}

		enum Presence {
			Blood = 0;
			Frost = 1;
			Unholy = 2;
		}

		Opener opener = 1;
		OptimizationSetting optimization_setting = 2;
		BloodSpell blood_spell = 3;
		Presence presence = 4;
		BloodTapPrio blood_tap_prio = 5;
	}
	Rotation rotation = 1;

	message Options {
		DeathKnightOptions class_options = 1;
		double defensive_delay = 2;
		bool drw_pesti_apply = 3;
	}
	Options options = 3;
}

message FrostDeathKnight {
	message Rotation {
	}

	message Options {
		DeathKnightOptions class_options = 1;
		bool use_ams = 2;
		double avg_ams_success_rate = 3;
		double avg_ams_hit = 4;
	}
	Options options = 3;
}

message UnholyDeathKnight {
	message Rotation {
	}

	message Options {
		DeathKnightOptions class_options = 1;
		UnitReference unholy_frenzy_target = 2;
		bool use_ams = 3;
		double avg_ams_success_rate = 4;
		double avg_ams_hit = 5;
	}
	Options options = 3;
}
